syntax = "proto3";

option java_package = "io.anemos.protobeam.examples";
option java_multiple_files = true;

import "google/protobuf/timestamp.proto";
import "anemos/options.proto";

package anemos.protobeam.examples;

message ToFlatten {
    string test_string = 1;
    int32 test_int32 = 2;

    Meta meta = 666 [(anemos.field_rewrite) = {
        flatten: true
    }];
}

message Meta {
    string m1 = 1;
    int32 m2 = 2;
    google.protobuf.Timestamp m3 = 3;
}